2009-08-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-item-editing.js: added code
	to enable modification of certain events based on their acl, even
	if the user cannot add events to the calendar.

	* src/calendar/base/content/calendar-summary-dialog.js: imported
	module and modified it to set it's readOnly mode based on the
	userCanRespond and userCanModify permissions from CalDAVAclManager.

2009-08-04  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Added src/patches/468846.diff - even if it's a temporary fix
	* src/calendar/providers/storage/calStorageCalendar.js and
	src/calendar/base/src/calTransactionManager.js - we no longer
	reset the partipation status when the attendee's id (ie., the
	email address) is identical to the one from the organizer.

2009-08-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js (addDAVItem): A bug was
	introduced in with the fix below, where the metadata would not be
	saved for new items when a listener was not provided. In the case
	of a non-cached calendar, the issue is minor because we lose the
	metadata between sessions. For cached calendars, the presence of a
	listener argument should have no impact.

2009-07-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: addDAVItem fixed to not
	add new/updated items directly to the cached calendar but to
	notify the super calendar's listener instead, as done in multiple
	other places when solving bug
	https://bugzilla.mozilla.org/show_bug.cgi?id=463679. In this case,
	the bug is not totally the same but the underlying mechanism is
	similar. Note that addDAVItem can be used during a refresh
	operation, during which no listener will be provided. We then
	revert to the previous mechanism.

	* src/calendar/providers/storage/calStorageCalendar.js: reverted
	latest patch below as it prevented some operations from being
	completed. Replaced with a better and cleaner fix.
